[gd_scene load_steps=14 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_UI2D/theme/RobotoMono-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/Online_library_Panel.gd" type="Script" id=2]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/theme/Roboto-Medium.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.14902, 0.14902, 0.14902, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.270588, 0.270588, 0.270588, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[node name="Online_library_Panel" type="Panel"]
margin_right = 896.0
margin_bottom = 960.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 80.0
margin_right = -16.0
margin_bottom = -112.0
theme = SubResource( 2 )
custom_styles/bg = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
items = [ "Ítem 0", null, false, "Ítem 1", null, false, "Ítem 2", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="up" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 192.0
margin_bottom = 72.0
theme = SubResource( 8 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Previous"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="down" type="Button" parent="."]
margin_left = 704.0
margin_top = 16.0
margin_right = 880.0
margin_bottom = 72.0
theme = SubResource( 8 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="download" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -88.0
margin_right = 104.0
margin_bottom = -24.0
theme = SubResource( 8 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Download"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -104.0
margin_right = -560.0
margin_bottom = -16.0
text = "Downloading: "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 192.0
margin_top = -944.0
margin_right = -200.0
margin_bottom = -888.0
theme = SubResource( 10 )
text = "Page: 1"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="button_up" from="up" to="." method="_on_up_button_up"]
[connection signal="button_up" from="down" to="." method="_on_down_button_up"]
[connection signal="button_up" from="download" to="." method="_on_download_button_up"]
